force-app/main/default/objects/R360_KPI_Snapshot__c/R360_KPI_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Effective-dated actual, forecast and target values for Resource 360 executive and operational metrics.</description>
    <label>KPI Snapshot</label>
    <nameField><displayFormat>KPI-{000000}</displayFormat><label>KPI Snapshot Number</label><trackHistory>false</trackHistory><type>AutoNumber</type></nameField>
    <pluralLabel>KPI Snapshots</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>