force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Definition__c.field-meta.xml
<CustomField><fullName>Definition__c</fullName><description>Certified calculation and population definition.</description><label>Definition</label><length>1000</length><trackHistory>false</trackHistory><type>LongTextArea</type><visibleLines>3</visibleLines></CustomField>