force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Denominator__c.field-meta.xml
<CustomField><fullName>Denominator__c</fullName><description>Metric denominator retained for reconciliation.</description><label>Denominator</label><precision>18</precision><scale>4</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>