force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Engagement__c.field-meta.xml
<CustomField><fullName>Engagement__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>Optional project scope.</description><label>Engagement</label><referenceTo>Engagement__c</referenceTo><relationshipLabel>KPI Snapshots</relationshipLabel><relationshipName>KPI_Snapshots</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></CustomField>