force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Forecast__c.field-meta.xml
<CustomField><fullName>Forecast__c</fullName><defaultValue>false</defaultValue><description>True when the value represents an approved planning forecast rather than an actual.</description><label>Forecast</label><trackHistory>false</trackHistory><type>Checkbox</type></CustomField>