force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Grain__c.field-meta.xml
<CustomField><fullName>Grain__c</fullName><description>Time grain of this value.</description><label>Grain</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Daily</fullName><default>false</default><label>Daily</label></value><value><fullName>Weekly</fullName><default>false</default><label>Weekly</label></value><value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value><value><fullName>Quarterly</fullName><default>false</default><label>Quarterly</label></value><value><fullName>Forecast Week</fullName><default>false</default><label>Forecast Week</label></value></valueSetDefinition></valueSet></CustomField>