force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Metric_Code__c.field-meta.xml
<CustomField><fullName>Metric_Code__c</fullName><description>Stable semantic code used by reports, APIs and Pages.</description><label>Metric Code</label><length>80</length><trackHistory>false</trackHistory><type>Text</type></CustomField>