force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Metric_Label__c.field-meta.xml
<CustomField><fullName>Metric_Label__c</fullName><description>Business-facing metric label.</description><label>Metric Label</label><length>120</length><trackHistory>false</trackHistory><type>Text</type></CustomField>