force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Metric_Value__c.field-meta.xml
<CustomField><fullName>Metric_Value__c</fullName><description>Certified calculated or seeded demo value.</description><label>Metric Value</label><precision>18</precision><scale>4</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>