force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Numerator__c.field-meta.xml
<CustomField><fullName>Numerator__c</fullName><description>Metric numerator retained for reconciliation.</description><label>Numerator</label><precision>18</precision><scale>4</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>