force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Owner_Role__c.field-meta.xml
<CustomField><fullName>Owner_Role__c</fullName><description>Business role accountable for reviewing and acting on the metric.</description><label>Owner Role</label><length>80</length><trackHistory>false</trackHistory><type>Text</type></CustomField>