force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Policy_Version__c.field-meta.xml
<CustomField><fullName>Policy_Version__c</fullName><description>Effective metric or operating-policy version.</description><label>Policy Version</label><length>80</length><trackHistory>false</trackHistory><type>Text</type></CustomField>