force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Portfolio__c.field-meta.xml
<CustomField><fullName>Portfolio__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>Optional portfolio scope.</description><label>Portfolio</label><referenceTo>R360_Portfolio__c</referenceTo><relationshipLabel>KPI Snapshots</relationshipLabel><relationshipName>KPI_Snapshots</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></CustomField>