force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Scope_Key__c.field-meta.xml
<CustomField><fullName>Scope_Key__c</fullName><description>Stable source key for the metric scope.</description><label>Scope Key</label><length>100</length><trackHistory>false</trackHistory><type>Text</type></CustomField>