force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Scope_Label__c.field-meta.xml
<CustomField><fullName>Scope_Label__c</fullName><description>Human-readable scope label safe for operational reporting.</description><label>Scope Label</label><length>120</length><trackHistory>false</trackHistory><type>Text</type></CustomField>