force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Scope_Type__c.field-meta.xml
<CustomField><fullName>Scope_Type__c</fullName><description>Business scope represented by this snapshot.</description><label>Scope Type</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Enterprise</fullName><default>false</default><label>Enterprise</label></value><value><fullName>Account</fullName><default>false</default><label>Account</label></value><value><fullName>Portfolio</fullName><default>false</default><label>Portfolio</label></value><value><fullName>Sub-portfolio</fullName><default>false</default><label>Sub-portfolio</label></value><value><fullName>Engagement</fullName><default>false</default><label>Engagement</label></value><value><fullName>Resource</fullName><default>false</default><label>Resource</label></value><value><fullName>Role</fullName><default>false</default><label>Role</label></value><value><fullName>Capability</fullName><default>false</default><label>Capability</label></value></valueSetDefinition></valueSet></CustomField>