force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField><fullName>Snapshot_Date__c</fullName><description>Actual or forecast period date represented by the snapshot.</description><label>Snapshot Date</label><trackHistory>false</trackHistory><type>Date</type></CustomField>