force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Snapshot_Key__c.field-meta.xml
<CustomField><fullName>Snapshot_Key__c</fullName><description>Stable idempotency key for one metric, scope and period.</description><label>Snapshot Key</label><length>100</length><externalId>true</externalId><required>true</required><unique>true</unique><trackHistory>false</trackHistory><type>Text</type></CustomField>