force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Source_Cutoff__c.field-meta.xml
<CustomField><fullName>Source_Cutoff__c</fullName><description>Latest source cutoff represented in the metric.</description><label>Source Cutoff</label><trackHistory>false</trackHistory><type>DateTime</type></CustomField>