force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><description>Target evaluation state.</description><label>Status</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>On Target</fullName><default>false</default><label>On Target</label></value><value><fullName>Watch</fullName><default>false</default><label>Watch</label></value><value><fullName>At Risk</fullName><default>false</default><label>At Risk</label></value><value><fullName>Breached</fullName><default>false</default><label>Breached</label></value><value><fullName>Informational</fullName><default>false</default><label>Informational</label></value></valueSetDefinition></valueSet></CustomField>