force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Target_Value__c.field-meta.xml
<CustomField><fullName>Target_Value__c</fullName><description>Approved threshold or target in the same unit.</description><label>Target Value</label><precision>18</precision><scale>4</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>