force-app/main/default/objects/R360_KPI_Snapshot__c/fields/Unit__c.field-meta.xml
<CustomField><fullName>Unit__c</fullName><description>Display and semantic unit.</description><label>Unit</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Percent</fullName><default>false</default><label>Percent</label></value><value><fullName>Hours</fullName><default>false</default><label>Hours</label></value><value><fullName>Days</fullName><default>false</default><label>Days</label></value><value><fullName>Currency</fullName><default>false</default><label>Currency</label></value><value><fullName>Count</fullName><default>false</default><label>Count</label></value><value><fullName>Ratio</fullName><default>false</default><label>Ratio</label></value><value><fullName>Score</fullName><default>false</default><label>Score</label></value><value><fullName>Points</fullName><default>false</default><label>Points</label></value></valueSetDefinition></valueSet></CustomField>